--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -186,7 +186,7 @@ $tree-arrow-size: 16px;
   .v-treeview--dense .v-treeview-node__root {
     min-height: 2em;
   }
-  .okita-nav-tree {
+  .siv-nav-tree {
     height: 100%;
     background-color: var(--nav-background-color);
     span, div {
